objects/Case_QA_Template__c.object
<CustomObject>
    <description>RN - CloudSmiths - Template object for all CSC Case QA forms</description>
    <fields>
        <fullName>BusinessArea__c</fullName>
        <label>Business Area ( HUB )</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial PTA</fullName>
                </value>
                <value>
                    <fullName>Corporate PTA</fullName>
                </value>
                <value>
                    <fullName>EBSH</fullName>
                </value>
                <value>
                    <fullName>EBSH CSC Pretoria</fullName>
                </value>
                <value>
                    <fullName>EBSS</fullName>
                </value>
                <value>
                    <fullName>EBSS CSC Pretoria</fullName>
                </value>
                <value>
                    <fullName>POB</fullName>
                </value>
                <value>
                    <fullName>POB JHB</fullName>
                </value>
                <value>
                    <fullName>RBB South Africa</fullName>
                </value>
                <value>
                    <fullName>RSC</fullName>
                </value>
                <value>
                    <fullName>RSCC</fullName>
                </value>
                <value>
                    <fullName>RSC - Commercial CPT</fullName>
                </value>
                <value>
                    <fullName>RSC - Commercial PTA</fullName>
                </value>
                <value>
                    <fullName>RSC - Corporate CPT</fullName>
                </value>
                <value>
                    <fullName>RSC - Corporate PTA</fullName>
                </value>
                <value>
                    <fullName>TCS</fullName>
                </value>
                <value>
                    <fullName>RSCS - Corporate PTA</fullName>
                </value>
                <value>
                    <fullName>RSCS - Corporate CPT</fullName>
                </value>
                <value>
                    <fullName>RSCS - Bank Confirmations</fullName>
                </value>
                <value>
                    <fullName>RSC – Enterprise PTA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QAName__c</fullName>
        <description>RN - CloudSmiths - Name of the QA template</description>
        <label>QA Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeightingTotal__c</fullName>
        <label>Weighting Total</label>
        <summarizedField>Case_QA_Question__c.Weighting__c</summarizedField>
        <summaryForeignKey>Case_QA_Question__c.QATemplate__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Case QA Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>BusinessArea__c</columns>
        <columns>WeightingTotal__c</columns>
        <columns>QAName__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QAT-{000000}</displayFormat>
        <label>Case QA Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case QA Templates</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>